force-app/main/default/objects/Account/fields/Account_Balance__c.field-meta.xml
<CustomField>
    <fullName>Account_Balance__c</fullName>
    <formula>Total_Outstanding_Balance_Merge__c - Unapplied_Overpayments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Can be negative, inclusive of unapplied overpayments. Total_Outstanding_Balance__c - Unapplied_Overpayments__c</inlineHelpText>
    <label>Account Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>