force-app/main/default/objects/Account/fields/Account_Designation__c.field-meta.xml
<CustomField>
    <fullName>Account_Designation__c</fullName>
    <formula>IF(

AND(

ISPICKVAL(Account_Temperature__c,&quot;Hot&quot;),
ISPICKVAL( Key_Account__c ,&quot;Key Account&quot;)
),

IMAGE(&quot;/resource/1553274837000/Crown_Icon&quot;, &quot;crown&quot;) &amp; &quot; &quot; &amp;
IMAGE(&quot;/resource/1553274971000/Flame_Icon&quot;, &quot;flame&quot;),

IF(

ISPICKVAL(Account_Temperature__c,&quot;Hot&quot;),

IMAGE(&quot;/resource/1553274971000/Flame_Icon&quot;, &quot;flame&quot;),

IF(

ISPICKVAL( Key_Account__c ,&quot;Key Account&quot;),

IMAGE(&quot;/resource/1553274837000/Crown_Icon&quot;, &quot;crown&quot;),
&quot;&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Controlled by the Account Temperature and Key Account fields. Flame =  Sensitive Customer. Crown = VIP treatment.</inlineHelpText>
    <label>Account Designation</label>
    <type>Text</type>
</CustomField>