force-app/main/default/objects/Account/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>CS Account Number</description>
    <displayFormat>PE-{0000000}</displayFormat>
    <label>CS Account Number</label>
    <type>AutoNumber</type>
</CustomField>