force-app/main/default/objects/Account/fields/Account_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Account_Temperature__c</fullName>
    <description>Select to mark sensitive due to compliant or other issue.</description>
    <inlineHelpText>Select to mark sensitive due to compliant or other issue.</inlineHelpText>
    <label>Account Temperature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>