force-app/main/default/objects/Account/fields/Active_SSA_Version__c.field-meta.xml
<CustomField>
    <fullName>Active_SSA_Version__c</fullName>
    <inlineHelpText>This is used to track the current status of the SSA with a partner.</inlineHelpText>
    <label>SSA Status</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Active</fullName>
                
                
                    <label>Active</label>
                
                </value>
            
                <value>
                
                    <fullName>Active with New Version Pending</fullName>
                
                
                    <label>Active with New Version Pending</label>
                
                </value>
            
                <value>
                
                    <fullName>SSA Pending</fullName>
                
                
                    <label>SSA Pending for New Partner</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>