force-app/main/default/objects/Account/fields/Additional_Contact__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>CS Bills and payment transaction errors will be sent to this contact&apos;s email address</inlineHelpText>
    <label>Additional Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Additional Contact)</relationshipLabel>
    <relationshipName>AdditionalContact</relationshipName>
    <type>Lookup</type>
</CustomField>