force-app/main/default/objects/Account/fields/Additional_Email__c.field-meta.xml
<CustomField>
    <fullName>Additional_Email__c</fullName>
    <formula>Send_Bills_Contact__r.Additional_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Email</label>
    <type>Text</type>
</CustomField>