force-app/main/default/objects/Account/fields/Address_Attn__c.field-meta.xml
<CustomField>
    <fullName>Address_Attn__c</fullName>
    <label>Address Attn:</label>
    <length>50</length>
    <type>Text</type>
</CustomField>