force-app/main/default/objects/Account/fields/Assignment_Agreement_Template__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Agreement_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Assignment Agreement template that is used  by Conga when generating the assignment agreement document.</inlineHelpText>
    <label>Assignment Agreement Template</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>