force-app/main/default/objects/Account/fields/Autopay_Date_Last_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Autopay_Date_Last_Enrolled__c</fullName>
    <inlineHelpText>The last day someone opted in to Autopay</inlineHelpText>
    <label>Autopay Date Last Enrolled</label>
    <type>Date</type>
</CustomField>