force-app/main/default/objects/Account/fields/B_Corp__c.field-meta.xml
<CustomField>
    <fullName>B_Corp__c</fullName>
    <label>B Corporation</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Yes</fullName>
                
                
                    <label>Yes</label>
                
                </value>
            
                <value>
                
                    <fullName>No</fullName>
                
                
                    <label>No</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>