force-app/main/default/objects/Account/fields/Bankruptcy_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_Explanation__c</fullName>
    <description>Has the company, or any owners of the company, ever declared bankruptcy?</description>
    <inlineHelpText>Has the company, or any owners of the company, ever declared bankruptcy?</inlineHelpText>
    <label>Bankruptcy Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>