force-app/main/default/objects/Account/fields/Bill_Delivery_Preference__c.field-meta.xml
<CustomField>
    <fullName>Bill_Delivery_Preference__c</fullName>
    <label>Bill Delivery Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email and Paper</fullName>
            </value>
            <value>
                <fullName>Email only</fullName>
                <default>true</default>
                <label>Email only</label>
            </value>
            <value>
                <fullName>Paper only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>