force-app/main/default/objects/Account/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Zuora Billing Account, updated when Z360 syncs a new Billing Account to Salesforce</inlineHelpText>
    <label>Billing Account</label>
    <referenceTo>Zuora__CustomerAccount__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>