force-app/main/default/objects/Account/fields/Business_Phone__c.field-meta.xml
<CustomField>
    <fullName>Business_Phone__c</fullName>
    <inlineHelpText>Phone entered by applicant in business phone field in SSF</inlineHelpText>
    <label>Business Phone</label>
    <type>Phone</type>
</CustomField>