force-app/main/default/objects/Account/fields/Cancellation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Comments__c</fullName>
    <label>Cancellation Comments</label>
    <type>TextArea</type>
</CustomField>