force-app/main/default/objects/Account/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <inlineHelpText>Reason the customer cancelled their CS Subscription</inlineHelpText>
    <label>Cancellation Reason - Internal</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Lack of Payment</fullName>
                
                
                    <label>Lack of Payment - Default</label>
                
                </value>
            
                <value>
                
                    <fullName>Lack of Payment - Unhappy with customer service/servicing</fullName>
                
                
                    <label>Lack of Payment - Unhappy with customer service/servicing</label>
                
                </value>
            
                <value>
                
                    <fullName>Lack of Payment - Does Not Understand Product</fullName>
                
                
                    <label>Lack of Payment - Does Not Understand Product</label>
                
                </value>
            
                <value>
                
                    <fullName>Lack of Payment - Product Does Not Meet Needs</fullName>
                
                
                    <label>Lack of Payment - Product Does Not Meet Needs</label>
                
                </value>
            
                <value>
                
                    <fullName>Lack of Payment - Financial Hardship</fullName>
                
                
                    <label>Lack of Payment - Financial Hardship</label>
                
                </value>
            
                <value>
                
                    <fullName>Lack of Payment - Business Sold/Out of Business</fullName>
                
                
                    <label>Lack of Payment - Business Sold/Out of Business</label>
                
                </value>
            
                <value>
                
                    <fullName>Lack of Payment - Customer Moved</fullName>
                
                
                    <label>Lack of Payment - Customer Moved</label>
                
                </value>
            
                <value>
                
                    <fullName>Lack of Payment - Unable to Establish Communication</fullName>
                
                
                    <label>Lack of Payment - Unable to Establish Communication</label>
                
                </value>
            
                <value>
                
                    <fullName>Lack of Payment - Other</fullName>
                
                
                    <label>Lack of Payment - Other</label>
                
                </value>
            
                <value>
                
                    <fullName>Customer Moved</fullName>
                
                
                    <label>Customer Moved</label>
                
                </value>
            
                <value>
                
                    <fullName>Business Sold/Out of Business</fullName>
                
                
                    <label>Business Sold/Out of Business</label>
                
                </value>
            
                <value>
                
                    <fullName>Does Not Understand Product</fullName>
                
                
                    <label>Does Not Understand Product</label>
                
                </value>
            
                <value>
                
                    <fullName>Ineligible account</fullName>
                
                
                    <label>Ineligible account</label>
                
                </value>
            
                <value>
                
                    <fullName>Product Does Not Meet Needs</fullName>
                
                
                    <label>Product Does Not Meet Needs</label>
                
                </value>
            
                <value>
                
                    <fullName>Transferred Servicers</fullName>
                
                
                    <label>Transferred Servicers</label>
                
                </value>
            
                <value>
                
                    <fullName>Unauthorized Enrollment/Improper Sale</fullName>
                
                
                    <label>Unauthorized Enrollment/Improper Sale</label>
                
                </value>
            
                <value>
                
                    <fullName>Unhappy with customer service/servicing</fullName>
                
                
                    <label>Unhappy with customer service/servicing</label>
                
                </value>
            
                <value>
                
                    <fullName>Financial Hardship</fullName>
                
                
                    <label>Financial Hardship</label>
                
                </value>
            
                <value>
                
                    <fullName>Death</fullName>
                
                
                    <label>Death</label>
                
                </value>
            
                <value>
                
                    <fullName>Other</fullName>
                
                
                    <label>Other</label>
                
                </value>
            
                <value>
                
                    <fullName>Lack of Payment - Unhappy with BW Service</fullName>
                
                
                    <isActive>false</isActive>
                
                    <label>Lack of Payment - Unhappy with BW Service</label>
                
                </value>
            
                <value>
                
                    <fullName>Unable to Establish Communication</fullName>
                
                
                    <isActive>false</isActive>
                
                    <label>Unable to Establish Communication</label>
                
                </value>
            
                <value>
                
                    <fullName>Unhappy with BW Service</fullName>
                
                
                    <isActive>false</isActive>
                
                    <label>Unhappy with BW Service</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>