force-app/main/default/objects/Account/fields/Cancellation_Reason_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason_Approval_Status__c</fullName>
    <label>Cancellation Reason Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Pending Approval</fullName>
                
                
                    <label>Pending Approval</label>
                
                </value>
            
                <value>
                
                    <fullName>Approved</fullName>
                
                
                    <label>Approved</label>
                
                </value>
            
                <value>
                
                    <fullName>Rejected</fullName>
                
                
                    <label>Rejected</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>