force-app/main/default/objects/Account/fields/Cancellation_Reason_External__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason_External__c</fullName>
    <formula>IF(
CONTAINS(TEXT(Cancellation_Reason__c),&quot;Lack of Payment&quot;)
,&quot;Deliquency&quot;,

CASE(TEXT(Cancellation_Reason__c), 
&quot;Customer Moved&quot;, &quot;Customer Moved / Out of Business&quot;,
&quot;Business Sold/Out of Business&quot;, &quot;Customer Moved / Out of Business&quot;,
&quot;Does Not Understand Product&quot;, &quot;Customer Not Satisfied with Product&quot;,
&quot;Product Does Not Meet Needs&quot;,  &quot;Customer Not Satisfied with Product&quot;,
&quot;Unhappy with customer service/servicing&quot;,  &quot;Customer Not Satisfied with Product&quot;,
&quot;Financial Hardship&quot;, &quot;Financial Hardship&quot;,
&quot;Death&quot;, &quot;Death&quot;,
&quot;Ineligible account&quot;, &quot;Ineligible Account&quot;,
&quot;Unauthorized Enrollment/Improper Sale&quot;, &quot;Ineligible Account&quot;,
&quot;Transferred Servicers&quot;, &quot;Other&quot;,
&quot;Other&quot;, &quot;Other&quot;,
&quot; &quot;) 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancellation Reason</label>
    <type>Text</type>
</CustomField>