force-app/main/default/objects/Account/fields/Cancellation_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Request_Date__c</fullName>
    <inlineHelpText>Must fill out &quot;Cancellation Reason&quot; before saving</inlineHelpText>
    <label>Cancellation Request Date</label>
    <type>Date</type>
</CustomField>