force-app/main/default/objects/Account/fields/ClickToDial__Country_Code__c.field-meta.xml
<CustomField>
    <fullName>ClickToDial__Country_Code__c</fullName>
    <description>Specify the record level country code to override global country code setting. Value from this field will be added to your Click-to-Call links(only this record). Leave this field blank if your phone numbers already have country code. Example Value: +1</description>
    <inlineHelpText>Specify the record level country code to override global country code setting. Value from this field will be added to your Click-to-Call links(only this record). Leave this field blank if your phone numbers already have country code. Example Value: +1</inlineHelpText>
    <label>Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>