force-app/main/default/objects/Account/fields/Client_Brand_Key__c.field-meta.xml
<CustomField>
    <fullName>Client_Brand_Key__c</fullName>
    <inlineHelpText>Set before an opportunity is inserted, or if the Account, SSS, or Stage is updated on the opportunity. Also set if the Client Brand Key on a SSS is updated.</inlineHelpText>
    <label>Client Brand Key</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>Client_Logo_Filenames</valueSetName>
        
        </valueSet>
</CustomField>