force-app/main/default/objects/Account/fields/Collection_Call_Today__c.field-meta.xml
<CustomField>
    <fullName>Collection_Call_Today__c</fullName>
    <formula>AND(ISPICKVAL(Suppress_Collections__c, &quot;&quot;),
    OR(Days_Past_Due__c = 10, 
       Days_Past_Due__c = 15, 
       Days_Past_Due__c = 30,
       Days_Past_Due__c = 45,
       Days_Past_Due__c = 60,
       Days_Past_Due__c = 74,
       Days_Past_Due__c = 81,
       Days_Past_Due__c = 88,
       Days_Past_Due__c = 90)
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection Call Today</label>
    <type>Checkbox</type>
</CustomField>