force-app/main/default/objects/Account/fields/Collection_Email_Text__c.field-meta.xml
<CustomField>
    <fullName>Collection_Email_Text__c</fullName>
    <description>This text is used in the collection email templates.</description>
    <formula>IF(Days_Past_Due__c &lt;=30, 
&quot;As a reminder, there are no fees for one time OR recurring auto-payments made through our portal!&quot;,
&quot;Per your community solar agreement, &quot; &amp; $Label.Company_Name &amp; &quot; reserves the right to cancel your agreement at any point after your account becomes ten days past due.&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection Email Text</label>
    <type>Text</type>
</CustomField>