force-app/main/default/objects/Account/fields/Collection_Email_To_Fire_Today__c.field-meta.xml
<CustomField>
    <fullName>Collection_Email_To_Fire_Today__c</fullName>
    <formula>AND(ISPICKVAL(Suppress_Collections__c, &quot;&quot;),
    OR(Max_Overdue_Due_Date_Merge__c - 3 = Today(),
       Days_Past_Due__c = 7, 
       Days_Past_Due__c = 15, 
       Days_Past_Due__c = 30,
       Days_Past_Due__c = 45,
       Days_Past_Due__c = 60,
       Days_Past_Due__c = 67,
       Days_Past_Due__c = 74,
       Days_Past_Due__c = 81,
       Days_Past_Due__c = 88,
       Days_Past_Due__c = 90)
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection Email To Fire Today</label>
    <type>Checkbox</type>
</CustomField>