force-app/main/default/objects/Account/fields/Company_Bio__c.field-meta.xml
<CustomField>
    <fullName>Company_Bio__c</fullName>
    <description>Submitted by Partner through installer application.</description>
    <inlineHelpText>Submitted by Partner through installer application.</inlineHelpText>
    <label>Company Bio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>