force-app/main/default/objects/Account/fields/Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <description>For the Partner QC Scorecard. 60-80%= 1   &gt;80% =2.</description>
    <inlineHelpText>For the Partner QC Scorecard. 60-80%= 1   &gt;80% =2.</inlineHelpText>
    <label>Conversion Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>