force-app/main/default/objects/Account/fields/Count_of_ABs__c.field-meta.xml
<CustomField>
    <fullName>Count_of_ABs__c</fullName>
    <label>Count of ABs</label>
    <summaryFilterItems>
        
            <field>Account_Bill__c.Published__c</field>
        
            <operation>equals</operation>
        
            <value>True</value>
        
        </summaryFilterItems>
    <summaryForeignKey>Account_Bill__c.Parent_Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>