force-app/main/default/objects/Account/fields/Count_of_Eversource_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Eversource_Opportunities__c</fullName>
    <label>Count of Eversource Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.UtilityMapper__c</field>
        <operation>equals</operation>
        <value>Eversource</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>