force-app/main/default/objects/Account/fields/Count_of_Large_Offtake_Opps__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Large_Offtake_Opps__c</fullName>
    <inlineHelpText>Count of non-Cancelled Anchor opportunities that indicate whether this Property Account is large offtake, in which case the cancellation process is manual.</inlineHelpText>
    <label>Count of Large Offtake Opps</label>
    <summaryFilterItems>
        
            <field>Opportunity.Customer_Group__c</field>
        
            <operation>equals</operation>
        
            <value>Anchor</value>
        
        </summaryFilterItems>
    <summaryFilterItems>
        
            <field>Opportunity.StageName</field>
        
            <operation>notEqual</operation>
        
            <value>Cancelled</value>
        
        </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>