force-app/main/default/objects/Account/fields/Count_of_RL_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Count_of_RL_Opportunities__c</fullName>
    <inlineHelpText>Used to determine Product Line</inlineHelpText>
    <label>Count of RL Opportunities</label>
    <summaryFilterItems>
        
            <field>Opportunity.Product_Line__c</field>
        
            <operation>equals</operation>
        
            <value>Residential Loan</value>
        
        </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>