force-app/main/default/objects/Account/fields/Create_Zuora_Account__c.field-meta.xml
<CustomField>
    <fullName>Create_Zuora_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked on a Property Account without a Zuora Id, a process is started to create an account in Zuora with the related Send Bills Contact. If the Account already has a Zuora Id, the process will create subscriptions that are missing.</inlineHelpText>
    <label>Create Zuora Account and Subscriptions</label>
    <type>Checkbox</type>
</CustomField>