force-app/main/default/objects/Account/fields/Credits_Allocated_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Credits_Allocated_Adjustments__c</fullName>
    <inlineHelpText>Rollup of Credits Allocated from Adjustments</inlineHelpText>
    <label>Credits Allocated Adjustments</label>
    <summarizedField>Bill_Adjustment__c.Credits_Allocated__c</summarizedField>
    <summaryForeignKey>Bill_Adjustment__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>