force-app/main/default/objects/Account/fields/Credits_Allocated_UASB__c.field-meta.xml
<CustomField>
    <fullName>Credits_Allocated_UASB__c</fullName>
    <inlineHelpText>Rollup of credits allocated from UASBs</inlineHelpText>
    <label>Credits Allocated UASB</label>
    <summarizedField>UASB__c.Credits_Allocated__c</summarizedField>
    <summaryForeignKey>UASB__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>