force-app/main/default/objects/Account/fields/Date_Cancellation_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Cancellation_Email_Sent__c</fullName>
    <label>Date Cancellation Email Sent:</label>
    <type>Date</type>
</CustomField>