force-app/main/default/objects/Account/fields/Date_Removed_from_Project__c.field-meta.xml
<CustomField>
    <fullName>Date_Removed_from_Project__c</fullName>
    <inlineHelpText>Automatically filled when this Property Account has been removed from all enacted Schedule Z&apos;s.</inlineHelpText>
    <label>Date Removed from Last Project</label>
    <type>Date</type>
</CustomField>