force-app/main/default/objects/Account/fields/Days_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Days_Past_Due__c</fullName>
    <formula>IF(Total_Outstanding_Balance_Merge__c &gt; 1,
MAX(TODAY()-Max_Overdue_Due_Date_Merge__c,0),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Days Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>