force-app/main/default/objects/Account/fields/Declared_Bankruptcy__c.field-meta.xml
<CustomField>
    <fullName>Declared_Bankruptcy__c</fullName>
    <description>Has the company, or any owners of the company, ever declared bankruptcy?</description>
    <inlineHelpText>Has the company, or any owners of the company, ever declared bankruptcy?</inlineHelpText>
    <label>Declared Bankruptcy?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Yes</fullName>
                
                
                    <label>Yes</label>
                
                </value>
            
                <value>
                
                    <fullName>No</fullName>
                
                
                    <label>No</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>